# EKF-on-P3AT

./: README.md
hector_quadrotor/hector_quadrotor_model/: package.xml
p2os_teleop/src/: .p2os_teleop.cc.swp
p3at_description/launch/: spawn_p3at.launch
p3at_description/urdf/: pioneer3at.urdf.xacro  pioneer3at_body.xacro
p3at_localization/: CMakeLists.txt  package.xml
p3at_localization/launch/: p3at_ekf.launch  p3at_utm_odometry.launch
setup/: package.xml
setup/config/P3AT_localization/: localization.yaml
setup/launch/P3AT_launch_files/: p3at_VO.launch  p3at_ekf.launch  p3at_fexploration.launch  p3at_main.launch  p3at_move_base.launch  p3at_spawn.launch  p3at_utm_odometry.launch
setup/rviz/: validconfig.rviz
